--- a/pc_side/src/mv/views/usersettingswindow.ui
+++ b/pc_side/src/mv/views/usersettingswindow.ui
@@ -13,31 +13,24 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="password">
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>60</y>
+     <y>140</y>
      <width>113</width>
      <height>21</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_2">
-   <property name="geometry">
-    <rect>
-     <x>160</x>
-     <y>110</y>
-     <width>113</width>
-     <height>21</height>
-    </rect>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_3">
+  <widget class="QLineEdit" name="email">
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>160</y>
+     <y>240</y>
      <width>113</width>
      <height>21</height>
     </rect>
@@ -47,20 +40,20 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>60</y>
+     <y>40</y>
      <width>91</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>New login</string>
+    <string>Llogin</string>
    </property>
   </widget>
   <widget class="QLabel" name="loginLabel_2">
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>110</y>
+     <y>140</y>
      <width>91</width>
      <height>16</height>
     </rect>
@@ -73,61 +66,43 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>160</y>
+     <y>240</y>
      <width>91</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>New email</string>
+    <string>Email</string>
    </property>
   </widget>
   <widget class="QLabel" name="loginLabel_4">
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>210</y>
+     <y>290</y>
      <width>91</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>New name</string>
+    <string>Name</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_4">
+  <widget class="QLineEdit" name="name">
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>210</y>
+     <y>290</y>
      <width>113</width>
      <height>21</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>250</y>
-     <width>181</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>7</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Leave blank space to keep old information</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="changeButton">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>290</y>
+     <x>90</x>
+     <y>340</y>
      <width>141</width>
      <height>41</height>
     </rect>
@@ -149,6 +124,85 @@
     <string>Back</string>
    </property>
   </widget>
+  <widget class="QLabel" name="loginLabel_5">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>190</y>
+     <width>91</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Confirm password</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="passwordConfirmed">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>190</y>
+     <width>113</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="passwordOld">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>90</y>
+     <width>113</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="loginLabel_6">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>90</y>
+     <width>91</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Old password</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="login">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>40</y>
+     <width>113</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <zorder>password</zorder>
+  <zorder>email</zorder>
+  <zorder>loginLabel</zorder>
+  <zorder>loginLabel_2</zorder>
+  <zorder>loginLabel_3</zorder>
+  <zorder>loginLabel_4</zorder>
+  <zorder>name</zorder>
+  <zorder>changeButton</zorder>
+  <zorder>backButton</zorder>
+  <zorder>loginLabel_5</zorder>
+  <zorder>passwordConfirmed</zorder>
+  <zorder>login</zorder>
+  <zorder>passwordOld</zorder>
+  <zorder>loginLabel_6</zorder>
  </widget>
  <resources/>
  <connections/>
