--- a/pc_side/src/mv/views/stockwindow.ui
+++ b/pc_side/src/mv/views/stockwindow.ui
@@ -6,82 +6,33 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>284</width>
-    <height>303</height>
+    <width>1130</width>
+    <height>616</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QPushButton" name="loginButton">
+  <widget class="QPushButton" name="backButton">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>160</y>
-     <width>80</width>
-     <height>21</height>
+     <x>530</x>
+     <y>550</y>
+     <width>81</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
-    <string>Log In</string>
+    <string>Back</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="registerButton">
+  <widget class="QTextBrowser" name="textBrowser">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>240</y>
-     <width>80</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Register</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="loginLabel">
-   <property name="geometry">
-    <rect>
-     <x>50</x>
-     <y>60</y>
-     <width>51</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Login</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="passwordLabel">
-   <property name="geometry">
-    <rect>
-     <x>50</x>
-     <y>110</y>
-     <width>51</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Password</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="loginField">
-   <property name="geometry">
-    <rect>
-     <x>120</x>
-     <y>60</y>
-     <width>113</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="passwordField">
-   <property name="geometry">
-    <rect>
-     <x>120</x>
-     <y>110</y>
-     <width>113</width>
-     <height>21</height>
+     <x>20</x>
+     <y>20</y>
+     <width>1091</width>
+     <height>521</height>
     </rect>
    </property>
   </widget>
